# voila-gridstack

./: .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  environment.yml  install.json  jest.config.js  jupyter_config.json  package.json  postBuild  pyproject.toml  setup.cfg  setup.py  tsconfig.eslint.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  publish-release.yml  pythonpackage.yml  ui-tests.yml  update_galata_references.yaml
binder/: environment.yml  postBuild
docs/: conf.py  environment.yml  index.md  index.rst
docs/content/: development.md  format.md  installation.md  usage.md
etc/jupyter/jupyter_notebook_config.d/: voila-gridstack.json
etc/jupyter/jupyter_server_config.d/: voila-gridstack.json
etc/jupyter/nbconfig/notebook.d/: voila-gridstack.json
examples/: Untitled.ipynb  basics.ipynb  iris_example.ipynb  nb_report.ipynb  scotch_dashboard.ipynb  test.ipynb
schema/: settings.json
scripts/: bump-version.py  develop.py
share/jupyter/nbconvert/templates/gridstack/: conf.json  grid.html.j2  grid_type.html.j2  gridstack.js.j2  gridstack_base.html.j2  index.html  index.html.j2  report.html.j2
share/jupyter/voila/templates/gridstack/: voila.tpl
share/jupyter/voila/templates/gridstack/nbconvert_templates/: grid.tpl  gridstack_base.tpl  report.tpl  voila.tpl
src/: icons.ts  index.ts
src/__tests__/: format.spec.ts
src/editor/: factory.ts  format.ts  icons.ts  index.ts  panel.ts  panel.tsx  widget.ts
src/editor/components/: cell.ts  dashboardMetadataEditor.tsx  editorGridstack.tsx  gridItem.ts  notebookButtons.ts
src/editor/gridstack/: gridstackItemWidget.ts  gridstackLayout.ts  gridstackModel.ts  gridstackWidget.ts  layout.ts  model.ts  widget.ts
src/editor/item/: index.ts  toolbar.tsx
src/editor/toolbar/: compact.tsx  edit.tsx  save.tsx  viewSelector.tsx  voila.tsx
src/editor/views/: gridstack.tsx  gridstackPanel.ts  gridstackPanel.tsx  notebook.ts  preview.tsx
src/widgets/: index.ts
style/: index.css
tests/: conftest.py  nb.ipynb  test_empty_notebook.py  test_notebook_metadata.py  test_report_view.py  test_resources.py  test_templates.py
ui-tests/: jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/tests/: extension.test.ts  template.test.ts
voila-gridstack/: __init__.py  server_extension.py
voila-gridstack/static/: extension.js  gridstack.jqueryUI_require.js  gridstack.js  voila-gridstack.css  voila-gridstack.js
voila_gridstack/: __init__.py  _version.py  server_extension.py
voila_gridstack/config/: jupyter_config.json
voila_gridstack/nbextension/: gridstack-jq.js
voila_gridstack/template/: gridstack.js.j2  gridstack_base.html.j2
voila_gridstack/tests/: conftest.py  nb.ipynb  nb_report.ipynb  nb_without_metadata.ipynb  test_empty_notebook.py  test_notebook_metadata.py  test_report_view.py  test_templates.py
