[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1", "jupyterlab_widgets~=1.0", "voila>=0.2,<0.4"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["voila_gridstack/labextension/static/style.js"]
ensured-targets = ["voila_gridstack/labextension/static/style.js", "voila_gridstack/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.jupyter-releaser]
skip = ["check-links"]

[tool.jupyter-releaser.hooks]
before-build-npm = ["python -m pip install jupyterlab~=3.0", "jlpm clean", "jlpm", "jlpm build:prod"]
before-build-python = ["jlpm clean:all"]

[tool.check-manifest]
ignore = ["assets/**", "binder/**", "examples/**", "scripts/**", "voila_gridstack/labextension/**", "yarn.lock", ".*", "package-lock.json", "lint-staged.config.js", "babel.config.js", "jest.config.js"]