[build-system]
requires = ["hatchling>=1.9.0", "hatch-nodejs-version", "jupyterlab~=3.1", "jupyterlab_widgets~=3.0", "voila>=0.2,<0.5"]
build-backend = "hatchling.build"

[project]
name = "voila-gridstack"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = ["jupyterlab_widgets~=3.0", "voila>=0.2.0,<0.5.0"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
dev = [
    "click",
    "jupyter_releaser~=0.9",
    "hatch",
    "hatch-nodejs-version"
]
test = [
    "ipykernel",
    "lxml",
    "nbconvert==6.5.0",
    "pytest",
    "pytest-tornasync",
]
docs = [
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.wheel.shared-data]
"voila_gridstack/config/jpserver-voila-gridstack.json" = "etc/jupyter/jupyter_server_config.d/jpserver-voila-gridstack.json"
"voila_gridstack/config/nbserver-voila-gridstack.json" = "etc/jupyter/jupyter_notebook_config.d/nbserver-voila-gridstack.json"
"voila_gridstack/config/nb-voila-gridstack.json" = "etc/jupyter/nbconfig/notebook.d/nb-voila-gridstack.json"
"install.json" = "share/jupyter/labextensions/@voila-dashboards/jupyterlab-gridstack/install.json"
"voila_gridstack/labextension" = "share/jupyter/labextensions/@voila-dashboards/jupyterlab-gridstack"
"voila_gridstack/nbextension" = "share/jupyter/nbextensions/voila-gridstack"
"voila_gridstack/template" = "share/jupyter/nbconvert/templates/gridstack"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.6.2"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["voila_gridstack/labextension/static/style.js", "voila_gridstack/labextension/package.json"]
skip-if-exists = ["voila_gridstack/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = ["jlpm"]

[tool.jupyter-releaser]
skip = ["check-links"]

[tool.jupyter-releaser.hooks]
before-build-npm = ["python -m pip install jupyterlab~=3.1", "jlpm", "jlpm build:prod"]
before-build-python = ["jlpm clean:all"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
